samples/_failures_safe/1761247439_cde5ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5158b7c6.c: In function ‘main’:
./samples/SAFE/__tmp_5158b7c6.c:137:12: error: missing terminating " character
  137 |     printf("
      |            ^
./samples/SAFE/__tmp_5158b7c6.c:137:5: error: expected expression at end of input
  137 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_5158b7c6.c:137:5: error: expected declaration or statement at end of input
